# usmaanwahab-co-uk

./: .gitignore  Cargo.toml  courses.json  deploy.sh
nginx/: usmaanwahab.co.uk
src/: main.rs  riot_api.rs  spotify.rs  spotify_auth.rs  spotify_utils.rs
src/riot/: mod.rs
src/spotify/: api.rs  auth.rs  mod.rs
static/: audio-player.css  audio-player.js  base.css  base.js  index.js  league.css  league.js  spotify.js
templates/: audio-player.html.tera  base.html.tera  callback.html.tera  education.html.tera  experience.html.tera  index.html.tera  league-match-history.html.tera  league.html.tera  projects.html.tera  recently-played.html.tera  spotify.html.tera  top-artists.html.tera  top-tracks.html.tera
templates/projects/: toggl-sync.html.tera  usmaanwahab-co-uk.html.tera
templates/riot/: league.html.tera  match-history.html.tera
templates/spotify/: recently-played.html.tera  spotify.html.tera  top-artists.html.tera  top-tracks.html.tera
