[package]
name = "usmaanwahab-co-uk"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
reqwest = { version = "0.11", features = ["blocking"]}
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

